Bug 262275: Allow to expand/collapse comments when viewing bugs - Patch by FrÃ©dÃ©ric Buclin <LpSolit@gmail.com> r=myk a=LpSolit

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -322,6 +322,10 @@ div.user_match {
     padding: 0.5em 1em;
 }
 
+.collapsed {
+    display: none;
+}
+
 /* Rules specific for printing */
 @media print {
     #header, #footer {
